@@ -21,8 +21,8 @@ name: Paragraphs Demo
 package: Paragraphs
 type: module
 
-# Information added by Drupal.org packaging script on 2018-10-31
-version: '8.x-1.5'
+# Information added by Drupal.org packaging script on 2019-02-20
+version: '8.x-1.6'
 core: '8.x'
 project: 'paragraphs'
-datestamp: 1541001786
+datestamp: 1550669588
